# ksox-server

./: .gitignore  Cargo.toml  README.md  skaffold.yaml
.github/workflows/: master_build.yml  rust.yml
api/: Cargo.toml
api/src/: app.rs  envs.rs  errors.rs  jwt.rs  main.rs  tests.rs  user.rs
api/src/auth/: errors.rs
api/src/auth/jwt/: mod.rs  models.rs  tests.rs  traits.rs
api/src/tests/: api_test.rs
auth/: Cargo.toml
balance/: Cargo.toml
core/blockchain/: Cargo.toml
core/blockchain/src/: types.rs
core/database/: Cargo.toml
core/exchange/: Cargo.toml
core/models/: Cargo.toml
core/models/src/: asset.rs  balance.rs  fraction.rs  lib.rs  order.rs  trade.rs  user.rs
core/transfer/: Cargo.toml
crates/balance/: Cargo.toml
crates/exchange/: Cargo.toml
crates/networks/: Cargo.toml
crates/networks/src/: errors.rs  lib.rs  traits.rs  types.rs
crates/pay/: Cargo.toml
engine/: Cargo.toml
exchange/: Cargo.toml
k8s/patches/dev/: kustomization.yaml  redis.patch.yaml  redis.yaml  surrealdb.patch.yaml  surrealdb.yaml
k8s/resources/: kustomization.yaml  redis.yaml  surrealdb.yaml
pay/: Cargo.toml
worker/: Cargo.toml
worker/src/: errors.rs  main.rs
