[workspace]
resolver = "2"
members = [
    "api",
    "crates/balance",
    "crates/exchange",
    "crates/networks",
    "crates/pay",
    "crates/shutdown",
]

[workspace.package]
edition = "2021"
version = "0.1.0"
authors = ["The KSOX Team"]
description = "The KSOX Project"

[workspace.dependencies]
axum = { version = "0.6", features = [
    "headers",
    "http2",
    "macros",
    "multipart",
    "tracing",
    "ws",
] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
hyper = { version = "0.14", features = ["full"] }
jsonwebtoken = "8"
once_cell = "1"
proptest = "1"
ring = "0.17"
seq-macro = "0.3"
serde = { version = "1", features = ["derive"] }
surrealdb = { version = "1", features = ["kv-mem"] }
thiserror = "1"
tokio = { version = "1", features = ["full", "tracing"] }
tokio-stream = "0.1"
tower = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
url = "2"
