[package]
name = "api"
edition.workspace = true
version.workspace = true
authors.workspace = true
description.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum.workspace = true
chrono.workspace = true
futures.workspace = true
hyper.workspace = true
jsonwebtoken.workspace = true
once_cell.workspace = true
proptest.workspace = true
ring.workspace = true
seq-macro.workspace = true
serde.workspace = true
shutdown = { version = "0.1.0", path = "../crates/shutdown" }
surrealdb.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tower.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
